modified navigation for pages

--- a/styles/main.css
+++ b/styles/main.css
@@ -103,6 +103,7 @@ body {
     padding: 12px 30px;    
     color: #fff;
     border: none;
+    width: 30%;
     border-radius: 10px;
     font-size: 18px;
     cursor: pointer;
