--- a/styles/start_up.css
+++ b/styles/start_up.css
@@ -46,3 +46,16 @@
     height: auto;
     margin-left: auto;
 }
+
+.acc {
+    width: 100%;
+    height: 60px;
+    background-color: red;
+    margin-top: 10px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    padding-top: 20px;
+    text-align:center;
+    padding-right: 10px;
+    padding-left: 10px
+}
